fix gallerytext align

--- a/cavendish/cavendish.css
+++ b/cavendish/cavendish.css
@@ -1982,6 +1982,7 @@ div.gallerybox div.thumb {
 div.gallerytext {
     font-size: 94%;
     padding: 2px 4px;
+    text-align: left;
 }
 
 /* ADDED BY DEB@DRIA.ORG FOR DEVMO WIKI */
